<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/black"
    tools:context=".ui.game.GameFragment">

    <FrameLayout
        android:id="@+id/game_surface_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/game_menu_container"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_menu_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/all_game"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_menu"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/game_counter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/all_game"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/game_counter_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/dif_counter" />

            <TextView
                android:id="@+id/game_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0_10"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/hint_counter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_game"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/game_hint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/hint" />

            <TextView
                android:id="@+id/hint_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/_10"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <ImageView
            android:id="@+id/next_game"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_next"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/olbiProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/game_logo"
            android:src="@drawable/olbi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/load_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/averia_libre_light_italic"
            android:text="@string/load_message"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:indeterminate="true"
            android:max="100"
            android:progressDrawable="@drawable/olbi_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>